[gd_scene load_steps=2 format=3 uid="uid://dyc6whgevy0nt"]

[ext_resource type="Script" uid="uid://cnejxnrt6oi12" path="res://level.gd" id="1_u52ul"]

[node name="Level" type="Node2D"]
script = ExtResource("1_u52ul")

[node name="Grid" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="RestartButton" type="Button" parent="UI"]
offset_left = 103.0
offset_top = 1.0
offset_right = 303.0
offset_bottom = 51.0
pivot_offset = Vector2(20, 20)
text = "Заново"

[node name="WinLabel" type="Label" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.0
offset_top = -11.5
offset_right = 71.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.84313726, 0, 1)
theme_override_font_sizes/font_size = 48
text = "уровень пройден"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MovesLabel" type="Label" parent="UI"]
offset_right = 40.0
offset_bottom = 23.0
pivot_offset = Vector2(20, 80)
theme_override_font_sizes/font_size = 24
text = "Ходы: 0"

[node name="LevelController" type="Node" parent="."]

[connection signal="pressed" from="UI/RestartButton" to="." method="_on_restart_button_pressed"]
